--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "googleapis": "^84.0.0",
+    "node-cron": "^3.0.0",
     "telegraf": "^4.3.0"
   },
   "devDependencies": {
