heroku -> digital ocean

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "dev": "nodemon src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "14.17.1"
+  },
   "type": "module",
   "author": "Alexey Kavasin",
   "license": "ISC"
